移除 GameComponentAnalyzer 中未使用的 Status 枚举